--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "trybe-tunes",
   "version": "0.1.0",
+  "homepage": "https://gabriel-takaki.github.io/trybeTunes/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
@@ -12,7 +13,8 @@
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.2"
   },
-  "scripts": {
+  "scripts": {"predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -35,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
